Fix styling bugs, like word-break when span gets too long.

--- a/vanilla-react-todo/src/components/Options.css
+++ b/vanilla-react-todo/src/components/Options.css
@@ -1,3 +1,8 @@
+.Options {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
 .Options > * {
   cursor: pointer;
   margin: 0 5px;
